feat: タイムラプス実装を追加した
